Corrected Image tagging with different images and different tags

--- a/New_Image_tagging/package.json
+++ b/New_Image_tagging/package.json
@@ -17,6 +17,7 @@
     "del": "1.1.1",
     "axios": "^0.4.2",
     "flux": "^2.0.1",
+    "lodash": "^4.13.1",
     "moment": "latest"
   },
   "paths": {
