--- a/New_Image_tagging/bower.json
+++ b/New_Image_tagging/bower.json
@@ -3,7 +3,7 @@
     "dependencies": {
         "react": "latest",
         "bootstrap": "latest",
-        "lodash": "latest",
+        "lodash": "^4.13.1",
         "underscore.string": "latest",
         "font-awesome": "latest",
         "axios": "^0.4.2",
