Saved all the Changes

--- a/New_Image_tagging/bower.json
+++ b/New_Image_tagging/bower.json
@@ -1,5 +1,5 @@
 {
-    "name": "Image-label",
+    "name": "image-label",
     "dependencies": {
         "react": "latest",
         "bootstrap": "latest",
